# lgfx_simulator

./: CMakeLists.txt  main.cpp
inc/: lgfx_sim_sdl.hpp
